# opengl_study

./: CMakeLists.txt  Object.h  main.cpp
common_classes/: OpenGLWindow.cpp  OpenGLWindow.h
opengl4-tutorial/: CMakeLists.txt  OpenGlWindow001.cpp  OpenGlWindow001.h  main.cpp
tokoi-opengl/: CMakeLists.txt  Matrix.h  Shape.h  Window.cpp  Window.h  main.cpp  point.frag  point.vert
tokoi-opengl/resources/: point.vert
