set(PROJECT_NAME "001-creating-opengl4-window")
project(${PROJECT_NAME})
cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 20)

file(GLOB TUTORIAL_001_SOURCE_FILES *.cpp)

set(COMMON_CLASSES_SOURCE_FILES
		"${COMMON_CLASSES_ROOT}/OpenGLWindow.cpp"
		)
set(COMMON_CLASSES_HEADER_FILES
		"${COMMON_CLASSES_ROOT}/OpenGLWindow.h"
		)
message("$COMMON_CLASSES_ROOT: " ${COMMON_CLASSES_ROOT})
message("$COMMON_CLASSES_SOURCE_FILES: " ${COMMON_CLASSES_SOURCE_FILES})
message("$COMMON_CLASSES_HEADER_FILES: " ${COMMON_CLASSES_HEADER_FILES})
find_package(GLFW3 REQUIRED)
message("GLFW_STATIC_LIBRARIES: " ${GLFW_STATIC_LIBRARIES})

set(ALL_SOURCE_FILES
		${TUTORIAL_001_SOURCE_FILES}
		${COMMON_CLASSES_SOURCE_FILES}
		${COMMON_CLASSES_HEADER_FILES}
		)

include_directories(${GLAD_ROOT}/include)

add_executable(${PROJECT_NAME} ${ALL_SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} glad glfw3 opengl32)